Test under 25.1 on Travis-CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
     - EVM_EMACS=emacs-24.3-travis
     - EVM_EMACS=emacs-24.4-travis
     - EVM_EMACS=emacs-24.5-travis
+    - EVM_EMACS=emacs-25.1-travis
 before_install:
   - git clone https://github.com/rejeep/evm $HOME/.evm
   - git clone https://github.com/cask/cask $HOME/.cask
